[HANK-5] running step 1-3 when uploading an image;
added image page that shows uploaded image and generated files.